[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Objects/EndScene.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/download.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="EndScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.133333, 0.113725, 0.658824 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TheEnd" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.0
margin_top = 66.0
margin_right = 62.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 1 )
text = "THE END"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThankYOu" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -175.5
margin_top = 128.0
margin_right = 175.5
margin_bottom = 166.0
custom_fonts/font = SubResource( 1 )
text = "Thank You For Playing!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecretLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -163.5
margin_top = 286.0
margin_right = 163.5
margin_bottom = 324.0
custom_fonts/font = SubResource( 1 )
text = "Did You Find Secret?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -16.0
margin_right = 76.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 2 )
text = "Back To Menu"

[node name="EggHunt" type="TextureRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -45.8291
margin_top = -198.168
margin_right = 531.171
margin_bottom = 601.832
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
